--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,37 +1,54 @@
 name: Appium Python Tests
-
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
-
+    branches: [main]
 jobs:
   run-appium-tests:
     runs-on: ubuntu-latest
-
     services:
       appium:
         image: appium/appium
         ports:
           - 4723:4723
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Run Appium Python Tests
-      env:
-        APPIUM_HOST: localhost
-        APPIUM_PORT: 4723
-      run: |
-        pytest Appium/TestCheckboxRadio.py
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Enable KVM
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+      - name: Install Android SDK
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          stop: false
+          avd-name: medium_phone_api_35
+          api-level: 35
+          target: default
+          arch: x86_64
+          force-avd-creation: true
+          emulator-options: '-no-window -no-audio'
+          disable-animations: true
+        script: |
+          echo "Emulator is running"
+          # Install Node & Appium
+          adb devices
+          sudo apt-get update
+          sudo apt-get install -y curl
+          curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+          sudo apt-get install -y nodejs
+          npm install -g appium
+          appium driver install uiautomator2
+          appium driver list --installed
+          appium --log appium.log &
+          pytest Appium/TestCheckboxRadio.py
