--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,28 +1,28 @@
-name: Appium Python Tests
+name: appium final
+
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches:
+      - main
+
+
 jobs:
-  run-appium-tests:
+  test:
     runs-on: ubuntu-latest
-    services:
-      appium:
-        image: appium/appium
-        ports:
-          - 4723:4723
+    timeout-minutes: 30
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Enable KVM
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
@@ -39,16 +39,19 @@ jobs:
           force-avd-creation: true
           emulator-options: '-no-window -no-audio'
           disable-animations: true
-        script: |
-          echo "Emulator is running"
-          # Install Node & Appium
-          adb devices
-          sudo apt-get update
-          sudo apt-get install -y curl
-          curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
-          sudo apt-get install -y nodejs
-          npm install -g appium
-          appium driver install uiautomator2
-          appium driver list --installed
-          appium --log appium.log &
-          pytest Appium/TestCheckboxRadio.py
+          script: |
+            echo "Emulator is running"
+            # Install Node & Appium
+            adb devices
+            sudo apt-get update
+            sudo apt-get install -y curl
+            curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+            npm install -g appium
+            appium driver install uiautomator2
+            appium driver list --installed
+            appium --log appium.log &
+            sleep 10 # Give Appium server time to start
+            run: |
+            pytest Appium/TestCheckboxRadio.py
+    
